- Finished User service handling
