# Clash-Bot-Service-TS/api/openapi.yaml
@@ -203,7 +203,7 @@ paths:
       x-eov-operation-handler: controllers/TeamController
     get:
       description: A list of people on the tentative queue for upcoming Tournaments.
-      operationId: getTenativeDetails
+      operationId: getTentativeDetails
       parameters:
       - description: The Server to filter the tentative queue by.
         explode: true
@@ -470,7 +470,8 @@ paths:
       - User
       x-eov-operation-handler: controllers/UserController
     patch:
-      description: Adds the requested champion to the users preferred champions.
+      description: Adds the requested champion to the users preferred champions. Cannot
+        be greater than a length of 5.
       operationId: addToListOfPreferredChampions
       parameters:
       - description: The Clash bot Player's id
@@ -496,6 +497,12 @@ paths:
                   type: string
                 type: array
           description: The updated list of preferred champions that the user has.
+        "204":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: No results found matching the criteria.
         "400":
           description: Input given is invalid.
         "5XX":
@@ -505,6 +512,7 @@ paths:
       x-eov-operation-handler: controllers/UserController
     post:
       description: Updates the users preferred champions with an entirely new list.
+        Cannot be greater than a length of 5.
       operationId: createNewListOfPreferredChampions
       parameters:
       - description: The Clash bot Player's id
@@ -530,6 +538,12 @@ paths:
                   type: string
                 type: array
           description: The new list of preferred champions that the user has.
+        "204":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: No results found matching the criteria.
         "400":
           description: Input given is invalid.
         "5XX":
@@ -862,7 +876,7 @@ components:
         championName:
           type: string
       required:
-      - champion
+      - championName
       type: object
     TeamPatchPayload:
       example:
